image should be relative path

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div style="text-align:center;">
-  <img src="/2017-System-Map.jpg" style="max-width:100vw; max-height: 100vh; display:inline-block;">
+  <img src="2017-System-Map.jpg" style="max-width:100vw; max-height: 100vh; display:inline-block;">
 </div>
 
 {{outlet}}
