--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+  if (window.location.protocol != 'https:') {
+    window.location.protocol = 'https';
+  }
+</script>
+
 <div style="text-align:center;">
   <img src="2017-System-Map.jpg" style="max-width:100vw; max-height: 100vh; display:inline-block;">
 </div>
