--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,4 +8,11 @@
   <img src="2017-System-Map.jpg" style="max-width:100vw; max-height: 100vh; display:inline-block;">
 </div>
 
+<div style="text-align: center;;">
+  <div style="text-align: center; background:silver; border-radius: 10px; display:inline-block; padding: 10px;">
+    <div>This site works offline</div>
+    <div>(Chrome or Firefox)</div>
+  </div>
+</div>
+
 {{outlet}}
