style the page better

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,17 +1,28 @@
 <script type="text/javascript">
-  if (window.location.protocol != 'https:') {
-    window.location.protocol = 'https';
-  }
+  // if (window.location.protocol != 'https:') {
+  //   window.location.protocol = 'https';
+  // }
 </script>
 
-<div style="text-align:center;">
-  <img src="2017-System-Map.jpg" style="max-width:100vw; max-height: 100vh; display:inline-block;">
-</div>
+<div style="color:gray; font-family: sans-serif;">
+  <div style="display:inline-block; padding: 10px; margin-top: 20px;">
+    DC Metro Map
+  </div>
 
-<div style="text-align: center;;">
-  <div style="text-align: center; background:silver; border-radius: 10px; display:inline-block; padding: 10px;">
-    <div>This site works offline</div>
+  <div style="text-align: center; float:right; border: 1px solid silver; border-radius: 10px; display:inline-block; padding: 10px; margin: 10px; line-height: 1.5em;">
+    <div>This site even works offline!</div>
     <div>(Chrome or Firefox)</div>
+  </div>
+
+  <div style="text-align:center;">
+    <img src="2017-System-Map.jpg" style="max-width:100vw; max-height: 100vh; display:inline-block;">
+  </div>
+
+  <div style="text-align: center; font-family: sans-serif;">
+    <div style="float: right; color: gray; border: 1px solid silver; border-radius: 10px; display:inline-block; padding: 10px; margin: 10px; line-height: 1.5em;">
+      <div style="font-size: .7em;">it's a <a style="color:gray;" href="https://developers.google.com/web/progressive-web-apps/">PWA</a></div>
+      <div style="font-size: .7em;"><a style="color:gray;" href="https://github.com/caseywatts/dcmetromap">code on github</a></div>
+    </div>
   </div>
 </div>
 
