--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,14 +5,17 @@
 </script>
 
 <div style="color:gray; font-family: sans-serif;">
-  <div style="display:inline-block; padding: 10px; margin-top: 20px;">
-    DC Metro Map
-  </div>
+  <div>
+    <div style="display:inline-block; padding: 10px; margin-top: 20px;">
+      DC Metro Map
+    </div>
 
-  <div style="text-align: center; float:right; border: 1px solid silver; border-radius: 10px; display:inline-block; padding: 10px; margin: 10px; line-height: 1.5em;">
-    <div>This site even works offline!</div>
-    <div>(Chrome or Firefox)</div>
+    <div style="text-align: center; float:right; border: 1px solid silver; border-radius: 10px; display:inline-block; padding: 10px; margin: 10px; line-height: 1.5em;">
+      <div>This site even works offline!</div>
+      <div>(Chrome or Firefox)</div>
+    </div>
   </div>
+  <div style="clear:both;"></div>
 
   <div style="text-align:center;">
     <img src="2017-System-Map.jpg" style="max-width:100vw; max-height: 100vh; display:inline-block;">
