do redirect http to https on the actual site

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <script type="text/javascript">
-  // if (window.location.protocol != 'https:') {
-  //   window.location.protocol = 'https';
-  // }
+  if (window.location.protocol != 'https:') {
+    window.location.protocol = 'https';
+  }
 </script>
 
 <div style="color:gray; font-family: sans-serif;">
