--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,6 +4,17 @@
   }
 </script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39558186-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-39558186-2');
+</script>
+
+
 <div style="color:gray; font-family: sans-serif;">
   <div>
     <div style="display:inline-block; padding: 10px; margin-top: 20px;">
