add note about NOT Safari

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -24,6 +24,7 @@
     <div style="text-align: center; float:right; border: 1px solid silver; border-radius: 10px; display:inline-block; padding: 10px; margin: 10px; line-height: 1.5em;">
       <div>This site even works offline!</div>
       <div>(Chrome or Firefox)</div>
+      <div>(<a style="color:gray;" href="http://appleinsider.com/articles/17/08/05/apple-may-integrate-service-workers-into-webkit-support-next-gen-web-apps-in-safari">NOT Safari yet</a>)</div>
     </div>
   </div>
   <div style="clear:both;"></div>
