extract logic to component https-only-if-production

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,4 @@
-<script type="text/javascript">
-  if (window.location.protocol != 'https:') {
-    window.location.protocol = 'https';
-  }
-</script>
+{{https-only-if-production}}
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39558186-2"></script>
